more deps in the opam file

--- a/dokeysto.opam
+++ b/dokeysto.opam
@@ -10,6 +10,8 @@ build: ["jbuilder" "build" "-p" name "-j" jobs]
 build-test: [make "test"]
 depends: [
   "jbuilder" {build}
+  "base-bytes"
+  "base-unix"
   "extunix"
   "lz4"
 ]
