--- a/dokeysto.opam
+++ b/dokeysto.opam
@@ -6,10 +6,10 @@ homepage: "https://github.com/UnixJunkie/dokeysto"
 bug-reports: "https://github.com/UnixJunkie/dokeysto/issues"
 dev-repo: "https://github.com/UnixJunkie/dokeysto.git"
 license: "LGPL-2.1"
-build: ["jbuilder" "build" "-p" name "-j" jobs]
+build: ["dune" "build" "-p" name "-j" jobs]
 build-test: [make "test"]
 depends: [
-  "jbuilder" {build}
+  "dune" {build & >= "1.0"}
   "base-bytes"
   "base-unix"
   "extunix"
