--- a/dokeysto.opam
+++ b/dokeysto.opam
@@ -5,23 +5,23 @@ maintainer: "unixjunkie@sdf.org"
 homepage: "https://github.com/UnixJunkie/dokeysto"
 bug-reports: "https://github.com/UnixJunkie/dokeysto/issues"
 dev-repo: "git+https://github.com/UnixJunkie/dokeysto.git"
-license: "LGPL-2.1"
+license: "LGPL-2.1-only"
 build: [
   ["dune" "build" "-p" name "-j" jobs]
-  [make "test"] {with-test}
+  ["dune" "exec" "-p" name "-j" jobs "src/test.exe"] {with-test}
 ]
 depends: [
   "ocaml"
-  "dune" {build & >= "1.0"}
+  "dune" {>= "1.11"}
   "base-bytes"
   "base-unix"
   "extunix"
   "minicli"
 ]
 synopsis: "The dumb OCaml key-value store"
-description: """Persistent hash table (i.e. in a file on disk) for string keys
-and string values."""
+description: """Persistent hash table (i.e. in a file on disk)."""
 #url {
-#  src: "https://github.com/UnixJunkie/dokeysto/archive/v3.0.1.tar.gz"
-#  checksum: "md5=
+#  src: "https://github.com/UnixJunkie/dokeysto/archive/v4.0.0.tar.gz"
+#  checksum: "md5=01278d2a0f672bb326595c9791b9ecdb"
 #}
+
